# ai_rules_generator

./: .SRCINFO  .gitignore  BUILD_WINDOWS.md  LICENSE  MANIFEST.in  PKGBUILD  PUBLISHING.md  README.md  ai_general_guidelines.md  ai_generator.py  ai_rules_generator.py  build_entry.py  cli.py  detection.py  generators.py  models.py  pyproject.toml  requirements.txt  setup.py  ultimate-ai-coding-rules-guide.md
.winget-future/: README.md
.winget-future/manifests/a/AIRulesGenerator/AIRulesGenerator/1.0.0/: AIRulesGenerator.AIRulesGenerator.installer.yaml  AIRulesGenerator.AIRulesGenerator.locale.en-US.yaml  AIRulesGenerator.AIRulesGenerator.yaml
.winget/manifests/a/AIRulesGenerator/AIRulesGenerator/1.0.0/: AIRulesGenerator.AIRulesGenerator.installer.yaml  AIRulesGenerator.AIRulesGenerator.locale.en-US.yaml  AIRulesGenerator.AIRulesGenerator.yaml
Formula/: ai-rules-generator.rb
ai_rules_generator/: __init__.py  ai_generator.py  ai_rules_generator.py  cli.py  config.py  config_manager.py  detection.py  file_utils.py  generators.py  generators_multi_tool.py  generators_shared.py  models.py
debian/: README.md  changelog  control  copyright  install  rules
flatpak/: README.md  com.github.ai_rules_generator.AIRulesGenerator.desktop  com.github.ai_rules_generator.AIRulesGenerator.metainfo.xml  com.github.ai_rules_generator.AIRulesGenerator.yaml
scripts/: README.md  build_windows.sh  bump_version.sh  local_deploy.sh  pre_deploy_check.sh  publish_aur.sh  publish_debian.sh  publish_flatpak.sh  publish_homebrew.sh  publish_pypi.sh  publish_winget.sh  update_checksums.sh  update_pip_homebrew_aur.sh
